@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package com.hedera.node.app.service.mono.store.contracts.precompile;
 
 import static com.hedera.node.app.service.mono.state.EntityCreator.EMPTY_MEMO;
@@ -177,53 +178,134 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 class ERC20PrecompilesTest {
-    @Mock private GlobalDynamicProperties dynamicProperties;
-    @Mock private GasCalculator gasCalculator;
-    @Mock private MessageFrame frame;
-    @Mock private TxnAwareEvmSigsVerifier sigsVerifier;
-    @Mock private RecordsHistorian recordsHistorian;
-    @Mock private EncodingFacade encoder;
-    @Mock private EvmEncodingFacade evmEncoder;
-    @Mock private SideEffectsTracker sideEffects;
-    @Mock private TransactionBody.Builder mockSynthBodyBuilder;
-    @Mock private ExpirableTxnRecord.Builder mockRecordBuilder;
-    @Mock private SyntheticTxnFactory syntheticTxnFactory;
-    @Mock private HederaStackedWorldStateUpdater worldUpdater;
-    @Mock private WorldLedgers wrappedLedgers;
-    @Mock private TransactionalLedger<NftId, NftProperty, UniqueTokenAdapter> nfts;
+    @Mock
+    private GlobalDynamicProperties dynamicProperties;
 
     @Mock
-    private TransactionalLedger<Pair<AccountID, TokenID>, TokenRelProperty, HederaTokenRel>
-            tokenRels;
+    private GasCalculator gasCalculator;
 
-    @Mock private TransactionalLedger<AccountID, AccountProperty, HederaAccount> accounts;
-    @Mock private TransactionalLedger<TokenID, TokenProperty, MerkleToken> tokens;
-    @Mock private ExpiringCreations creator;
-    @Mock private ImpliedTransfersMarshal impliedTransfersMarshal;
-    @Mock private FeeCalculator feeCalculator;
-    @Mock private StateView stateView;
-    @Mock private CryptoTransferTransactionBody cryptoTransferTransactionBody;
-    @Mock private ImpliedTransfersMeta impliedTransfersMeta;
-    @Mock private ImpliedTransfers impliedTransfers;
-    @Mock private TransferLogic transferLogic;
-    @Mock private HederaTokenStore hederaTokenStore;
-    @Mock private FeeObject mockFeeObject;
-    @Mock private ContractAliases aliases;
-    @Mock private UsagePricesProvider resourceCosts;
-    @Mock private BlockValues blockValues;
-    @Mock private InfrastructureFactory infrastructureFactory;
-    @Mock private ApproveAllowanceChecks allowanceChecks;
-    @Mock private DeleteAllowanceChecks deleteAllowanceChecks;
-    @Mock private CryptoApproveAllowanceTransactionBody cryptoApproveAllowanceTransactionBody;
-    @Mock private AccountStore accountStore;
-    @Mock private TypedTokenStore tokenStore;
-    @Mock private ApproveAllowanceLogic approveAllowanceLogic;
-    @Mock private AssetsLoader assetLoader;
-    @Mock private HbarCentExchange exchange;
-    @Mock private ExchangeRate exchangeRate;
-    @Mock private AccessorFactory accessorFactory;
-    @Mock private Account account;
-    @Mock private EvmHTSPrecompiledContract evmHTSPrecompiledContract;
+    @Mock
+    private MessageFrame frame;
+
+    @Mock
+    private TxnAwareEvmSigsVerifier sigsVerifier;
+
+    @Mock
+    private RecordsHistorian recordsHistorian;
+
+    @Mock
+    private EncodingFacade encoder;
+
+    @Mock
+    private EvmEncodingFacade evmEncoder;
+
+    @Mock
+    private SideEffectsTracker sideEffects;
+
+    @Mock
+    private TransactionBody.Builder mockSynthBodyBuilder;
+
+    @Mock
+    private ExpirableTxnRecord.Builder mockRecordBuilder;
+
+    @Mock
+    private SyntheticTxnFactory syntheticTxnFactory;
+
+    @Mock
+    private HederaStackedWorldStateUpdater worldUpdater;
+
+    @Mock
+    private WorldLedgers wrappedLedgers;
+
+    @Mock
+    private TransactionalLedger<NftId, NftProperty, UniqueTokenAdapter> nfts;
+
+    @Mock
+    private TransactionalLedger<Pair<AccountID, TokenID>, TokenRelProperty, HederaTokenRel> tokenRels;
+
+    @Mock
+    private TransactionalLedger<AccountID, AccountProperty, HederaAccount> accounts;
+
+    @Mock
+    private TransactionalLedger<TokenID, TokenProperty, MerkleToken> tokens;
+
+    @Mock
+    private ExpiringCreations creator;
+
+    @Mock
+    private ImpliedTransfersMarshal impliedTransfersMarshal;
+
+    @Mock
+    private FeeCalculator feeCalculator;
+
+    @Mock
+    private StateView stateView;
+
+    @Mock
+    private CryptoTransferTransactionBody cryptoTransferTransactionBody;
+
+    @Mock
+    private ImpliedTransfersMeta impliedTransfersMeta;
+
+    @Mock
+    private ImpliedTransfers impliedTransfers;
+
+    @Mock
+    private TransferLogic transferLogic;
+
+    @Mock
+    private HederaTokenStore hederaTokenStore;
+
+    @Mock
+    private FeeObject mockFeeObject;
+
+    @Mock
+    private ContractAliases aliases;
+
+    @Mock
+    private UsagePricesProvider resourceCosts;
+
+    @Mock
+    private BlockValues blockValues;
+
+    @Mock
+    private InfrastructureFactory infrastructureFactory;
+
+    @Mock
+    private ApproveAllowanceChecks allowanceChecks;
+
+    @Mock
+    private DeleteAllowanceChecks deleteAllowanceChecks;
+
+    @Mock
+    private CryptoApproveAllowanceTransactionBody cryptoApproveAllowanceTransactionBody;
+
+    @Mock
+    private AccountStore accountStore;
+
+    @Mock
+    private TypedTokenStore tokenStore;
+
+    @Mock
+    private ApproveAllowanceLogic approveAllowanceLogic;
+
+    @Mock
+    private AssetsLoader assetLoader;
+
+    @Mock
+    private HbarCentExchange exchange;
+
+    @Mock
+    private ExchangeRate exchangeRate;
+
+    @Mock
+    private AccessorFactory accessorFactory;
+
+    @Mock
+    private Account account;
+
+    @Mock
+    private EvmHTSPrecompiledContract evmHTSPrecompiledContract;
 
     private static final int CENTS_RATE = 12;
     private static final int HBAR_RATE = 1;
@@ -243,46 +325,34 @@ class ERC20PrecompilesTest {
         type.put(SubType.TOKEN_NON_FUNGIBLE_UNIQUE, BigDecimal.valueOf(0));
         canonicalPrices.put(HederaFunctionality.CryptoTransfer, type);
         given(assetLoader.loadCanonicalPrices()).willReturn(canonicalPrices);
-        final PrecompilePricingUtils precompilePricingUtils =
-                new PrecompilePricingUtils(
-                        assetLoader,
-                        exchange,
-                        () -> feeCalculator,
-                        resourceCosts,
-                        stateView,
-                        accessorFactory);
-        subject =
-                new HTSPrecompiledContract(
-                        dynamicProperties,
-                        gasCalculator,
-                        recordsHistorian,
-                        sigsVerifier,
-                        encoder,
-                        evmEncoder,
-                        syntheticTxnFactory,
-                        creator,
-                        () -> feeCalculator,
-                        stateView,
-                        precompilePricingUtils,
-                        infrastructureFactory,
-                        evmHTSPrecompiledContract);
+        final PrecompilePricingUtils precompilePricingUtils = new PrecompilePricingUtils(
+                assetLoader, exchange, () -> feeCalculator, resourceCosts, stateView, accessorFactory);
+        subject = new HTSPrecompiledContract(
+                dynamicProperties,
+                gasCalculator,
+                recordsHistorian,
+                sigsVerifier,
+                encoder,
+                evmEncoder,
+                syntheticTxnFactory,
+                creator,
+                () -> feeCalculator,
+                stateView,
+                precompilePricingUtils,
+                infrastructureFactory,
+                evmHTSPrecompiledContract);
         given(infrastructureFactory.newSideEffects()).willReturn(sideEffects);
         entityIdUtils = Mockito.mockStatic(EntityIdUtils.class);
         entityIdUtils
                 .when(() -> EntityIdUtils.accountIdFromEvmAddress(senderAddress))
                 .thenReturn(sender);
         entityIdUtils
-                .when(
-                        () ->
-                                EntityIdUtils.contractIdFromEvmAddress(
-                                        Address.fromHexString(HTS_PRECOMPILED_CONTRACT_ADDRESS)
-                                                .toArray()))
+                .when(() -> EntityIdUtils.contractIdFromEvmAddress(
+                        Address.fromHexString(HTS_PRECOMPILED_CONTRACT_ADDRESS).toArray()))
                 .thenReturn(precompiledContract);
         entityIdUtils.when(() -> EntityIdUtils.asTypedEvmAddress(sender)).thenReturn(senderAddress);
         entityIdUtils.when(() -> EntityIdUtils.asTypedEvmAddress(token)).thenReturn(tokenAddress);
-        entityIdUtils
-                .when(() -> EntityIdUtils.asTypedEvmAddress(receiver))
-                .thenReturn(recipientAddress);
+        entityIdUtils.when(() -> EntityIdUtils.asTypedEvmAddress(receiver)).thenReturn(recipientAddress);
         entityIdUtils
                 .when(() -> EntityIdUtils.tokenIdFromEvmAddress(fungibleTokenAddr.toArray()))
                 .thenReturn(token);
@@ -312,24 +382,21 @@ class ERC20PrecompilesTest {
         given(frame.getWorldUpdater()).willReturn(worldUpdater);
 
         given(worldUpdater.wrappedTrackingLedgers(any())).willReturn(wrappedLedgers);
-        final Bytes pretendArgumentsApprove =
-                Bytes.concatenate(
-                        Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
-                        fungibleTokenAddr,
-                        Bytes.of(Integers.toBytes(ABI_ID_ERC_APPROVE)));
+        final Bytes pretendArgumentsApprove = Bytes.concatenate(
+                Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
+                fungibleTokenAddr,
+                Bytes.of(Integers.toBytes(ABI_ID_ERC_APPROVE)));
 
         // when:
         subject.prepareFields(frame);
 
         assertThrows(
-                InvalidTransactionException.class,
-                () -> subject.prepareComputation(pretendArgumentsApprove, a -> a));
+                InvalidTransactionException.class, () -> subject.prepareComputation(pretendArgumentsApprove, a -> a));
 
-        final Bytes pretendArgumentsTransferFrom =
-                Bytes.concatenate(
-                        Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
-                        fungibleTokenAddr,
-                        Bytes.of(Integers.toBytes(ABI_ID_ERC_TRANSFER_FROM)));
+        final Bytes pretendArgumentsTransferFrom = Bytes.concatenate(
+                Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
+                fungibleTokenAddr,
+                Bytes.of(Integers.toBytes(ABI_ID_ERC_TRANSFER_FROM)));
 
         // when:
         subject.prepareFields(frame);
@@ -338,24 +405,21 @@ class ERC20PrecompilesTest {
                 InvalidTransactionException.class,
                 () -> subject.prepareComputation(pretendArgumentsTransferFrom, a -> a));
 
-        final Bytes pretendArgumentsAllowance =
-                Bytes.concatenate(
-                        Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
-                        fungibleTokenAddr,
-                        Bytes.of(Integers.toBytes(ABI_ID_ERC_ALLOWANCE)));
+        final Bytes pretendArgumentsAllowance = Bytes.concatenate(
+                Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
+                fungibleTokenAddr,
+                Bytes.of(Integers.toBytes(ABI_ID_ERC_ALLOWANCE)));
 
         // when:
         subject.prepareFields(frame);
 
         assertThrows(
-                InvalidTransactionException.class,
-                () -> subject.prepareComputation(pretendArgumentsAllowance, a -> a));
+                InvalidTransactionException.class, () -> subject.prepareComputation(pretendArgumentsAllowance, a -> a));
 
-        final Bytes pretendArgumentsApproveForAll =
-                Bytes.concatenate(
-                        Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
-                        fungibleTokenAddr,
-                        Bytes.of(Integers.toBytes(ABI_ID_ERC_SET_APPROVAL_FOR_ALL)));
+        final Bytes pretendArgumentsApproveForAll = Bytes.concatenate(
+                Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
+                fungibleTokenAddr,
+                Bytes.of(Integers.toBytes(ABI_ID_ERC_SET_APPROVAL_FOR_ALL)));
 
         // when:
         subject.prepareFields(frame);
@@ -364,11 +428,10 @@ class ERC20PrecompilesTest {
                 InvalidTransactionException.class,
                 () -> subject.prepareComputation(pretendArgumentsApproveForAll, a -> a));
 
-        final Bytes pretendArgumentsGetApproved =
-                Bytes.concatenate(
-                        Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
-                        fungibleTokenAddr,
-                        Bytes.of(Integers.toBytes(ABI_ID_ERC_GET_APPROVED)));
+        final Bytes pretendArgumentsGetApproved = Bytes.concatenate(
+                Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
+                fungibleTokenAddr,
+                Bytes.of(Integers.toBytes(ABI_ID_ERC_GET_APPROVED)));
 
         // when:
         subject.prepareFields(frame);
@@ -377,11 +440,10 @@ class ERC20PrecompilesTest {
                 InvalidTransactionException.class,
                 () -> subject.prepareComputation(pretendArgumentsGetApproved, a -> a));
 
-        final Bytes pretendArgumentsApprovedForAll =
-                Bytes.concatenate(
-                        Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
-                        fungibleTokenAddr,
-                        Bytes.of(Integers.toBytes(ABI_ID_ERC_IS_APPROVED_FOR_ALL)));
+        final Bytes pretendArgumentsApprovedForAll = Bytes.concatenate(
+                Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
+                fungibleTokenAddr,
+                Bytes.of(Integers.toBytes(ABI_ID_ERC_IS_APPROVED_FOR_ALL)));
 
         // when:
         subject.prepareFields(frame);
@@ -397,25 +459,21 @@ class ERC20PrecompilesTest {
         given(frame.getWorldUpdater()).willReturn(worldUpdater);
 
         given(worldUpdater.wrappedTrackingLedgers(any())).willReturn(wrappedLedgers);
-        final Bytes pretendArgumentsApprove =
-                Bytes.concatenate(Bytes.of(Integers.toBytes(ABI_ID_APPROVE)));
+        final Bytes pretendArgumentsApprove = Bytes.concatenate(Bytes.of(Integers.toBytes(ABI_ID_APPROVE)));
 
         // when:
         subject.prepareFields(frame);
 
         assertThrows(
-                InvalidTransactionException.class,
-                () -> subject.prepareComputation(pretendArgumentsApprove, a -> a));
+                InvalidTransactionException.class, () -> subject.prepareComputation(pretendArgumentsApprove, a -> a));
 
-        final Bytes pretendArgumentsAllowance =
-                Bytes.concatenate(Bytes.of(Integers.toBytes(ABI_ID_ALLOWANCE)));
+        final Bytes pretendArgumentsAllowance = Bytes.concatenate(Bytes.of(Integers.toBytes(ABI_ID_ALLOWANCE)));
 
         // when:
         subject.prepareFields(frame);
 
         assertThrows(
-                InvalidTransactionException.class,
-                () -> subject.prepareComputation(pretendArgumentsAllowance, a -> a));
+                InvalidTransactionException.class, () -> subject.prepareComputation(pretendArgumentsAllowance, a -> a));
 
         final Bytes pretendArgumentsApproveForAll =
                 Bytes.concatenate(Bytes.of(Integers.toBytes(ABI_ID_SET_APPROVAL_FOR_ALL)));
@@ -427,8 +485,7 @@ class ERC20PrecompilesTest {
                 InvalidTransactionException.class,
                 () -> subject.prepareComputation(pretendArgumentsApproveForAll, a -> a));
 
-        final Bytes pretendArgumentsGetApproved =
-                Bytes.concatenate(Bytes.of(Integers.toBytes(ABI_ID_GET_APPROVED)));
+        final Bytes pretendArgumentsGetApproved = Bytes.concatenate(Bytes.of(Integers.toBytes(ABI_ID_GET_APPROVED)));
 
         // when:
         subject.prepareFields(frame);
@@ -451,8 +508,7 @@ class ERC20PrecompilesTest {
     @Test
     void invalidNestedFunctionSelector() {
         final Bytes nestedPretendArguments = Bytes.of(0, 0, 0, 0);
-        final Bytes pretendArguments =
-                givenMinimalFrameContextWithoutParentUpdater(nestedPretendArguments);
+        final Bytes pretendArguments = givenMinimalFrameContextWithoutParentUpdater(nestedPretendArguments);
 
         given(wrappedLedgers.typeOf(token)).willReturn(TokenType.FUNGIBLE_COMMON);
 
@@ -467,17 +523,11 @@ class ERC20PrecompilesTest {
         final Bytes nestedPretendArguments = Bytes.of(Integers.toBytes(ABI_ID_ERC_NAME));
         final Bytes pretendArguments = givenMinimalFrameContext(nestedPretendArguments);
 
-        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments))
-                .willReturn(mockSynthBodyBuilder);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments)).willReturn(mockSynthBodyBuilder);
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
-        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any()))
-                .willReturn(mockFeeObject);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any())).willReturn(mockFeeObject);
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
         given(mockFeeObject.getNodeFee()).willReturn(1L);
         given(mockFeeObject.getNetworkFee()).willReturn(1L);
@@ -496,8 +546,7 @@ class ERC20PrecompilesTest {
         assertEquals(successResult, result);
         // and:
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
     }
 
     @Test
@@ -508,9 +557,7 @@ class ERC20PrecompilesTest {
         givenPricingUtilsContext();
 
         given(frame.getContractAddress()).willReturn(contractAddr);
-        given(
-                        syntheticTxnFactory.createCryptoTransfer(
-                                Collections.singletonList(tokensTransferList)))
+        given(syntheticTxnFactory.createCryptoTransfer(Collections.singletonList(tokensTransferList)))
                 .willReturn(mockSynthBodyBuilder);
         given(mockSynthBodyBuilder.getCryptoTransfer()).willReturn(cryptoTransferTransactionBody);
         given(impliedTransfersMarshal.validityWithCurrentProps(cryptoTransferTransactionBody))
@@ -518,47 +565,33 @@ class ERC20PrecompilesTest {
         given(sigsVerifier.hasActiveKey(anyBoolean(), any(), any(), any())).willReturn(true);
         given(sigsVerifier.hasActiveKeyOrNoReceiverSigReq(anyBoolean(), any(), any(), any()))
                 .willReturn(true, true);
-        given(infrastructureFactory.newImpliedTransfersMarshal(any()))
-                .willReturn(impliedTransfersMarshal);
+        given(infrastructureFactory.newImpliedTransfersMarshal(any())).willReturn(impliedTransfersMarshal);
         given(infrastructureFactory.newHederaTokenStore(sideEffects, tokens, nfts, tokenRels))
                 .willReturn(hederaTokenStore);
 
-        given(
-                        infrastructureFactory.newTransferLogic(
-                                hederaTokenStore, sideEffects, nfts, accounts, tokenRels))
+        given(infrastructureFactory.newTransferLogic(hederaTokenStore, sideEffects, nfts, accounts, tokenRels))
                 .willReturn(transferLogic);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
         given(mockSynthBodyBuilder.build())
-                .willReturn(
-                        TransactionBody.newBuilder()
-                                .setCryptoTransfer(cryptoTransferTransactionBody)
-                                .build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
+                .willReturn(TransactionBody.newBuilder()
+                        .setCryptoTransfer(cryptoTransferTransactionBody)
+                        .build());
+        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
         given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
-        given(
-                        impliedTransfersMarshal.assessCustomFeesAndValidate(
-                                anyInt(), anyInt(), anyInt(), any(), any(), any()))
+        given(impliedTransfersMarshal.assessCustomFeesAndValidate(anyInt(), anyInt(), anyInt(), any(), any(), any()))
                 .willReturn(impliedTransfers);
         given(impliedTransfers.getAllBalanceChanges()).willReturn(tokenTransferChanges);
         given(impliedTransfers.getMeta()).willReturn(impliedTransfersMeta);
         given(impliedTransfersMeta.code()).willReturn(OK);
         ercTransferPrecompile
-                .when(
-                        () ->
-                                ERCTransferPrecompile.decodeERCTransfer(
-                                        eq(nestedPretendArguments), any(), any(), any(), any()))
+                .when(() ->
+                        ERCTransferPrecompile.decodeERCTransfer(eq(nestedPretendArguments), any(), any(), any(), any()))
                 .thenReturn(CRYPTO_TRANSFER_FUNGIBLE_WRAPPER);
-        given(aliases.resolveForEvm(any()))
-                .willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+        given(aliases.resolveForEvm(any())).willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
         given(worldUpdater.aliases()).willReturn(aliases);
         given(wrappedLedgers.typeOf(token)).willReturn(TokenType.FUNGIBLE_COMMON);
         given(encoder.encodeEcFungibleTransfer(true)).willReturn(successResult);
@@ -577,8 +610,7 @@ class ERC20PrecompilesTest {
         // and:
         verify(transferLogic).doZeroSum(tokenTransferChanges);
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
     }
 
     @Test
@@ -586,18 +618,12 @@ class ERC20PrecompilesTest {
         final Bytes nestedPretendArguments = Bytes.of(Integers.toBytes(ABI_ID_ERC_NAME));
         final Bytes pretendArguments = givenMinimalFrameContext(nestedPretendArguments);
 
-        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments))
-                .willReturn(mockSynthBodyBuilder);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments)).willReturn(mockSynthBodyBuilder);
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
-        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any()))
-                .willReturn(mockFeeObject);
+        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getNodeFee()).willReturn(1L);
         given(mockFeeObject.getNetworkFee()).willReturn(1L);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
@@ -615,8 +641,7 @@ class ERC20PrecompilesTest {
         assertEquals(successResult, result);
         // and:
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
         final ArgumentCaptor<EvmFnResult> captor = ArgumentCaptor.forClass(EvmFnResult.class);
         verify(mockRecordBuilder).setContractCallResult(captor.capture());
         assertEquals(0L, captor.getValue().getGas());
@@ -629,19 +654,13 @@ class ERC20PrecompilesTest {
         final Bytes nestedPretendArguments = Bytes.of(Integers.toBytes(ABI_ID_ERC_SYMBOL));
         final Bytes pretendArguments = givenMinimalFrameContext(nestedPretendArguments);
 
-        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments))
-                .willReturn(mockSynthBodyBuilder);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments)).willReturn(mockSynthBodyBuilder);
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
 
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
-        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any()))
-                .willReturn(mockFeeObject);
+        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getNodeFee()).willReturn(1L);
         given(mockFeeObject.getNetworkFee()).willReturn(1L);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
@@ -658,8 +677,7 @@ class ERC20PrecompilesTest {
         assertEquals(successResult, result);
         // and:
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
     }
 
     @Test
@@ -667,19 +685,13 @@ class ERC20PrecompilesTest {
         final Bytes nestedPretendArguments = Bytes.of(Integers.toBytes(ABI_ID_ERC_DECIMALS));
         final Bytes pretendArguments = givenMinimalFrameContext(nestedPretendArguments);
 
-        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments))
-                .willReturn(mockSynthBodyBuilder);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments)).willReturn(mockSynthBodyBuilder);
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
 
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
-        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any()))
-                .willReturn(mockFeeObject);
+        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getNodeFee()).willReturn(1L);
         given(mockFeeObject.getNetworkFee()).willReturn(1L);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
@@ -698,28 +710,20 @@ class ERC20PrecompilesTest {
         assertEquals(successResult, result);
         // and:
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
     }
 
     @Test
     void totalSupply() {
-        final Bytes nestedPretendArguments =
-                Bytes.of(Integers.toBytes(ABI_ID_ERC_TOTAL_SUPPLY_TOKEN));
+        final Bytes nestedPretendArguments = Bytes.of(Integers.toBytes(ABI_ID_ERC_TOTAL_SUPPLY_TOKEN));
         final Bytes pretendArguments = givenMinimalFrameContext(nestedPretendArguments);
-        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments))
-                .willReturn(mockSynthBodyBuilder);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments)).willReturn(mockSynthBodyBuilder);
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
 
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
-        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any()))
-                .willReturn(mockFeeObject);
+        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getNodeFee()).willReturn(1L);
         given(mockFeeObject.getNetworkFee()).willReturn(1L);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
@@ -738,8 +742,7 @@ class ERC20PrecompilesTest {
         assertEquals(successResult, result);
         // and:
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
     }
 
     @Test
@@ -747,27 +750,20 @@ class ERC20PrecompilesTest {
         final TreeMap<FcTokenAllowanceId, Long> allowances = new TreeMap<>();
         allowances.put(
                 FcTokenAllowanceId.from(
-                        EntityNum.fromLong(token.getTokenNum()),
-                        EntityNum.fromLong(receiver.getAccountNum())),
+                        EntityNum.fromLong(token.getTokenNum()), EntityNum.fromLong(receiver.getAccountNum())),
                 10L);
 
         final Bytes nestedPretendArguments = Bytes.of(Integers.toBytes(ABI_ID_ERC_ALLOWANCE));
         final Bytes pretendArguments = givenMinimalFrameContext(nestedPretendArguments);
         given(wrappedLedgers.accounts()).willReturn(accounts);
         given(dynamicProperties.areAllowancesEnabled()).willReturn(true);
-        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments))
-                .willReturn(mockSynthBodyBuilder);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments)).willReturn(mockSynthBodyBuilder);
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
 
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
-        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any()))
-                .willReturn(mockFeeObject);
+        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getNodeFee()).willReturn(1L);
         given(mockFeeObject.getNetworkFee()).willReturn(1L);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
@@ -790,8 +786,7 @@ class ERC20PrecompilesTest {
         assertEquals(successResult, result);
         // and:
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
     }
 
     @Test
@@ -799,37 +794,27 @@ class ERC20PrecompilesTest {
         final TreeMap<FcTokenAllowanceId, Long> alowances = new TreeMap<>();
         alowances.put(
                 FcTokenAllowanceId.from(
-                        EntityNum.fromLong(token.getTokenNum()),
-                        EntityNum.fromLong(receiver.getAccountNum())),
+                        EntityNum.fromLong(token.getTokenNum()), EntityNum.fromLong(receiver.getAccountNum())),
                 10L);
 
         final Bytes pretendArguments = Bytes.of(Integers.toBytes(ABI_ID_ALLOWANCE));
         givenMinimalFrameContext(pretendArguments);
         given(wrappedLedgers.accounts()).willReturn(accounts);
         given(dynamicProperties.areAllowancesEnabled()).willReturn(true);
-        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments))
-                .willReturn(mockSynthBodyBuilder);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments)).willReturn(mockSynthBodyBuilder);
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
 
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
-        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any()))
-                .willReturn(mockFeeObject);
+        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getNodeFee()).willReturn(1L);
         given(mockFeeObject.getNetworkFee()).willReturn(1L);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
 
         given(accounts.contains(any())).willReturn(true);
         allowancePrecompile
-                .when(
-                        () ->
-                                AllowancePrecompile.decodeTokenAllowance(
-                                        eq(pretendArguments), any(), any()))
+                .when(() -> AllowancePrecompile.decodeTokenAllowance(eq(pretendArguments), any(), any()))
                 .thenReturn(ALLOWANCE_WRAPPER);
         given(accounts.get(any(), any())).willReturn(alowances);
         given(encoder.encodeAllowance(SUCCESS.getNumber(), 10L)).willReturn(successResult);
@@ -844,29 +829,21 @@ class ERC20PrecompilesTest {
         assertEquals(successResult, result);
         // and:
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
     }
 
     @Test
     void balanceOf() {
-        final Bytes nestedPretendArguments =
-                Bytes.of(Integers.toBytes(ABI_ID_ERC_BALANCE_OF_TOKEN));
+        final Bytes nestedPretendArguments = Bytes.of(Integers.toBytes(ABI_ID_ERC_BALANCE_OF_TOKEN));
         final Bytes pretendArguments = givenMinimalFrameContext(nestedPretendArguments);
 
-        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments))
-                .willReturn(mockSynthBodyBuilder);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(syntheticTxnFactory.createTransactionCall(1L, pretendArguments)).willReturn(mockSynthBodyBuilder);
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
 
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
-        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any()))
-                .willReturn(mockFeeObject);
+        given(feeCalculator.estimatePayment(any(), any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getNodeFee()).willReturn(1L);
         given(mockFeeObject.getNetworkFee()).willReturn(1L);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
@@ -881,11 +858,8 @@ class ERC20PrecompilesTest {
                 .when(() -> EntityIdUtils.tokenIdFromEvmAddress(fungibleTokenAddr.toArray()))
                 .thenReturn(token);
         entityIdUtils
-                .when(
-                        () ->
-                                EntityIdUtils.contractIdFromEvmAddress(
-                                        Address.fromHexString(HTS_PRECOMPILED_CONTRACT_ADDRESS)
-                                                .toArray()))
+                .when(() -> EntityIdUtils.contractIdFromEvmAddress(
+                        Address.fromHexString(HTS_PRECOMPILED_CONTRACT_ADDRESS).toArray()))
                 .thenReturn(precompiledContract);
 
         // when:
@@ -898,8 +872,7 @@ class ERC20PrecompilesTest {
         assertEquals(successResult, result);
         // and:
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
     }
 
     @Test
@@ -909,29 +882,20 @@ class ERC20PrecompilesTest {
         final Bytes nestedPretendArguments = Bytes.of(Integers.toBytes(ABI_ID_ERC_APPROVE));
         final Bytes pretendArguments = givenMinimalFrameContext(nestedPretendArguments);
 
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
         given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
 
-        given(syntheticTxnFactory.createFungibleApproval(APPROVE_WRAPPER))
-                .willReturn(mockSynthBodyBuilder);
-        given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
+        given(syntheticTxnFactory.createFungibleApproval(APPROVE_WRAPPER)).willReturn(mockSynthBodyBuilder);
+        given(mockSynthBodyBuilder.build())
+                .willReturn(TransactionBody.newBuilder().build());
+        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
         given(EntityIdUtils.accountIdFromEvmAddress((Address) any())).willReturn(sender);
 
         approvePrecompile
-                .when(
-                        () ->
-                                ApprovePrecompile.decodeTokenApprove(
-                                        eq(nestedPretendArguments),
-                                        eq(token),
-                                        eq(true),
-                                        any(),
-                                        any()))
+                .when(() -> ApprovePrecompile.decodeTokenApprove(
+                        eq(nestedPretendArguments), eq(token), eq(true), any(), any()))
                 .thenReturn(APPROVE_WRAPPER);
         given(wrappedLedgers.typeOf(token)).willReturn(TokenType.FUNGIBLE_COMMON);
         given(dynamicProperties.areAllowancesEnabled()).willReturn(true);
@@ -959,30 +923,22 @@ class ERC20PrecompilesTest {
 
         given(wrappedLedgers.tokens()).willReturn(tokens);
         given(wrappedLedgers.accounts()).willReturn(accounts);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
 
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
         given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
 
-        given(syntheticTxnFactory.createFungibleApproval(APPROVE_WRAPPER))
-                .willReturn(mockSynthBodyBuilder);
-        given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
-        given(mockSynthBodyBuilder.getCryptoApproveAllowance())
-                .willReturn(cryptoApproveAllowanceTransactionBody);
+        given(syntheticTxnFactory.createFungibleApproval(APPROVE_WRAPPER)).willReturn(mockSynthBodyBuilder);
+        given(mockSynthBodyBuilder.build())
+                .willReturn(TransactionBody.newBuilder().build());
+        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
+        given(mockSynthBodyBuilder.getCryptoApproveAllowance()).willReturn(cryptoApproveAllowanceTransactionBody);
 
         given(infrastructureFactory.newAccountStore(accounts)).willReturn(accountStore);
-        given(
-                        infrastructureFactory.newTokenStore(
-                                accountStore, sideEffects, tokens, nfts, tokenRels))
+        given(infrastructureFactory.newTokenStore(accountStore, sideEffects, tokens, nfts, tokenRels))
                 .willReturn(tokenStore);
         given(infrastructureFactory.newApproveAllowanceLogic(accountStore, tokenStore))
                 .willReturn(approveAllowanceLogic);
@@ -991,25 +947,13 @@ class ERC20PrecompilesTest {
         given(infrastructureFactory.newApproveAllowanceChecks()).willReturn(allowanceChecks);
         given(infrastructureFactory.newDeleteAllowanceChecks()).willReturn(deleteAllowanceChecks);
 
-        given(
-                        allowanceChecks.allowancesValidation(
-                                cryptoAllowances,
-                                tokenAllowances,
-                                nftAllowances,
-                                account,
-                                accountStore,
-                                tokenStore))
+        given(allowanceChecks.allowancesValidation(
+                        cryptoAllowances, tokenAllowances, nftAllowances, account, accountStore, tokenStore))
                 .willReturn(OK);
 
         approvePrecompile
-                .when(
-                        () ->
-                                ApprovePrecompile.decodeTokenApprove(
-                                        eq(nestedPretendArguments),
-                                        eq(token),
-                                        eq(true),
-                                        any(),
-                                        any()))
+                .when(() -> ApprovePrecompile.decodeTokenApprove(
+                        eq(nestedPretendArguments), eq(token), eq(true), any(), any()))
                 .thenReturn(APPROVE_WRAPPER);
         given(wrappedLedgers.typeOf(token)).willReturn(TokenType.FUNGIBLE_COMMON);
         given(dynamicProperties.areAllowancesEnabled()).willReturn(true);
@@ -1024,8 +968,7 @@ class ERC20PrecompilesTest {
         // then:
         assertEquals(successResult, result);
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
     }
 
     @Test
@@ -1041,30 +984,22 @@ class ERC20PrecompilesTest {
 
         given(wrappedLedgers.tokens()).willReturn(tokens);
         given(wrappedLedgers.accounts()).willReturn(accounts);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
 
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
         given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
 
-        given(syntheticTxnFactory.createFungibleApproval(APPROVE_WRAPPER))
-                .willReturn(mockSynthBodyBuilder);
-        given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
-        given(mockSynthBodyBuilder.getCryptoApproveAllowance())
-                .willReturn(cryptoApproveAllowanceTransactionBody);
+        given(syntheticTxnFactory.createFungibleApproval(APPROVE_WRAPPER)).willReturn(mockSynthBodyBuilder);
+        given(mockSynthBodyBuilder.build())
+                .willReturn(TransactionBody.newBuilder().build());
+        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
+        given(mockSynthBodyBuilder.getCryptoApproveAllowance()).willReturn(cryptoApproveAllowanceTransactionBody);
 
         given(infrastructureFactory.newAccountStore(accounts)).willReturn(accountStore);
-        given(
-                        infrastructureFactory.newTokenStore(
-                                accountStore, sideEffects, tokens, nfts, tokenRels))
+        given(infrastructureFactory.newTokenStore(accountStore, sideEffects, tokens, nfts, tokenRels))
                 .willReturn(tokenStore);
         given(infrastructureFactory.newApproveAllowanceLogic(accountStore, tokenStore))
                 .willReturn(approveAllowanceLogic);
@@ -1073,21 +1008,13 @@ class ERC20PrecompilesTest {
         given(infrastructureFactory.newApproveAllowanceChecks()).willReturn(allowanceChecks);
         given(infrastructureFactory.newDeleteAllowanceChecks()).willReturn(deleteAllowanceChecks);
 
-        given(
-                        allowanceChecks.allowancesValidation(
-                                cryptoAllowances,
-                                tokenAllowances,
-                                nftAllowances,
-                                account,
-                                accountStore,
-                                tokenStore))
+        given(allowanceChecks.allowancesValidation(
+                        cryptoAllowances, tokenAllowances, nftAllowances, account, accountStore, tokenStore))
                 .willReturn(OK);
 
         approvePrecompile
-                .when(
-                        () ->
-                                ApprovePrecompile.decodeTokenApprove(
-                                        eq(pretendArguments), eq(null), eq(true), any(), any()))
+                .when(() ->
+                        ApprovePrecompile.decodeTokenApprove(eq(pretendArguments), eq(null), eq(true), any(), any()))
                 .thenReturn(APPROVE_WRAPPER);
         given(dynamicProperties.areAllowancesEnabled()).willReturn(true);
         given(encoder.encodeApprove(SUCCESS.getNumber(), true)).willReturn(successResult);
@@ -1103,17 +1030,15 @@ class ERC20PrecompilesTest {
         // then:
         assertEquals(successResult, result);
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
         verify(frame)
-                .addLog(
-                        EncodingFacade.LogBuilder.logBuilder()
-                                .forLogger(tokenAddress)
-                                .forEventSignature(AbiConstants.APPROVAL_EVENT)
-                                .forIndexedArgument(senderAddress)
-                                .forIndexedArgument(recipientAddress)
-                                .forDataItem(APPROVE_WRAPPER.amount())
-                                .build());
+                .addLog(EncodingFacade.LogBuilder.logBuilder()
+                        .forLogger(tokenAddress)
+                        .forEventSignature(AbiConstants.APPROVAL_EVENT)
+                        .forIndexedArgument(senderAddress)
+                        .forIndexedArgument(recipientAddress)
+                        .forDataItem(APPROVE_WRAPPER.amount())
+                        .build());
     }
 
     @Test
@@ -1129,30 +1054,23 @@ class ERC20PrecompilesTest {
 
         given(wrappedLedgers.tokens()).willReturn(tokens);
         given(wrappedLedgers.accounts()).willReturn(accounts);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
 
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
         given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
 
         given(syntheticTxnFactory.createNonfungibleApproval(eq(APPROVE_NFT_WRAPPER), any(), any()))
                 .willReturn(mockSynthBodyBuilder);
-        given(mockSynthBodyBuilder.build()).willReturn(TransactionBody.newBuilder().build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
-        given(mockSynthBodyBuilder.getCryptoApproveAllowance())
-                .willReturn(cryptoApproveAllowanceTransactionBody);
+        given(mockSynthBodyBuilder.build())
+                .willReturn(TransactionBody.newBuilder().build());
+        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
+        given(mockSynthBodyBuilder.getCryptoApproveAllowance()).willReturn(cryptoApproveAllowanceTransactionBody);
 
         given(infrastructureFactory.newAccountStore(accounts)).willReturn(accountStore);
-        given(
-                        infrastructureFactory.newTokenStore(
-                                accountStore, sideEffects, tokens, nfts, tokenRels))
+        given(infrastructureFactory.newTokenStore(accountStore, sideEffects, tokens, nfts, tokenRels))
                 .willReturn(tokenStore);
         given(infrastructureFactory.newApproveAllowanceLogic(accountStore, tokenStore))
                 .willReturn(approveAllowanceLogic);
@@ -1162,21 +1080,13 @@ class ERC20PrecompilesTest {
         given(infrastructureFactory.newDeleteAllowanceChecks()).willReturn(deleteAllowanceChecks);
 
         given(wrappedLedgers.ownerIfPresent(any())).willReturn(ownerEntity);
-        given(
-                        allowanceChecks.allowancesValidation(
-                                cryptoAllowances,
-                                tokenAllowances,
-                                nftAllowances,
-                                account,
-                                accountStore,
-                                tokenStore))
+        given(allowanceChecks.allowancesValidation(
+                        cryptoAllowances, tokenAllowances, nftAllowances, account, accountStore, tokenStore))
                 .willReturn(OK);
 
         approvePrecompile
-                .when(
-                        () ->
-                                ApprovePrecompile.decodeTokenApprove(
-                                        eq(pretendArguments), eq(null), eq(false), any(), any()))
+                .when(() ->
+                        ApprovePrecompile.decodeTokenApprove(eq(pretendArguments), eq(null), eq(false), any(), any()))
                 .thenReturn(APPROVE_NFT_WRAPPER);
         given(dynamicProperties.areAllowancesEnabled()).willReturn(true);
         given(encoder.encodeApproveNFT(SUCCESS.getNumber())).willReturn(successResult);
@@ -1192,17 +1102,15 @@ class ERC20PrecompilesTest {
         // then:
         assertEquals(successResult, result);
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
         verify(frame)
-                .addLog(
-                        EncodingFacade.LogBuilder.logBuilder()
-                                .forLogger(tokenAddress)
-                                .forEventSignature(AbiConstants.APPROVAL_EVENT)
-                                .forIndexedArgument(senderAddress)
-                                .forIndexedArgument(recipientAddress)
-                                .forIndexedArgument(APPROVE_NFT_WRAPPER.serialNumber())
-                                .build());
+                .addLog(EncodingFacade.LogBuilder.logBuilder()
+                        .forLogger(tokenAddress)
+                        .forEventSignature(AbiConstants.APPROVAL_EVENT)
+                        .forIndexedArgument(senderAddress)
+                        .forIndexedArgument(recipientAddress)
+                        .forIndexedArgument(APPROVE_NFT_WRAPPER.serialNumber())
+                        .build());
     }
 
     @Test
@@ -1213,9 +1121,7 @@ class ERC20PrecompilesTest {
         givenPricingUtilsContext();
 
         given(frame.getContractAddress()).willReturn(contractAddr);
-        given(
-                        syntheticTxnFactory.createCryptoTransfer(
-                                Collections.singletonList(tokensTransferList)))
+        given(syntheticTxnFactory.createCryptoTransfer(Collections.singletonList(tokensTransferList)))
                 .willReturn(mockSynthBodyBuilder);
         given(mockSynthBodyBuilder.getCryptoTransfer()).willReturn(cryptoTransferTransactionBody);
         given(impliedTransfersMarshal.validityWithCurrentProps(cryptoTransferTransactionBody))
@@ -1223,48 +1129,34 @@ class ERC20PrecompilesTest {
         given(sigsVerifier.hasActiveKey(anyBoolean(), any(), any(), any())).willReturn(true);
         given(sigsVerifier.hasActiveKeyOrNoReceiverSigReq(anyBoolean(), any(), any(), any()))
                 .willReturn(true, true);
-        given(infrastructureFactory.newImpliedTransfersMarshal(any()))
-                .willReturn(impliedTransfersMarshal);
+        given(infrastructureFactory.newImpliedTransfersMarshal(any())).willReturn(impliedTransfersMarshal);
         given(infrastructureFactory.newHederaTokenStore(sideEffects, tokens, nfts, tokenRels))
                 .willReturn(hederaTokenStore);
 
-        given(
-                        infrastructureFactory.newTransferLogic(
-                                hederaTokenStore, sideEffects, nfts, accounts, tokenRels))
+        given(infrastructureFactory.newTransferLogic(hederaTokenStore, sideEffects, nfts, accounts, tokenRels))
                 .willReturn(transferLogic);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
         given(mockSynthBodyBuilder.build())
-                .willReturn(
-                        TransactionBody.newBuilder()
-                                .setCryptoTransfer(cryptoTransferTransactionBody)
-                                .build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
+                .willReturn(TransactionBody.newBuilder()
+                        .setCryptoTransfer(cryptoTransferTransactionBody)
+                        .build());
+        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
         given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
-        given(
-                        impliedTransfersMarshal.assessCustomFeesAndValidate(
-                                anyInt(), anyInt(), anyInt(), any(), any(), any()))
+        given(impliedTransfersMarshal.assessCustomFeesAndValidate(anyInt(), anyInt(), anyInt(), any(), any(), any()))
                 .willReturn(impliedTransfers);
         given(impliedTransfers.getAllBalanceChanges()).willReturn(tokenTransferChanges);
         given(impliedTransfers.getMeta()).willReturn(impliedTransfersMeta);
         given(impliedTransfersMeta.code()).willReturn(OK);
         ercTransferPrecompile
-                .when(
-                        () ->
-                                ERCTransferPrecompile.decodeERCTransfer(
-                                        eq(nestedPretendArguments), any(), any(), any(), any()))
+                .when(() ->
+                        ERCTransferPrecompile.decodeERCTransfer(eq(nestedPretendArguments), any(), any(), any(), any()))
                 .thenReturn(CRYPTO_TRANSFER_FUNGIBLE_WRAPPER);
 
-        given(aliases.resolveForEvm(any()))
-                .willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+        given(aliases.resolveForEvm(any())).willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
         given(worldUpdater.aliases()).willReturn(aliases);
         given(wrappedLedgers.typeOf(token)).willReturn(TokenType.FUNGIBLE_COMMON);
         given(wrappedLedgers.canonicalAddress(recipientAddress)).willReturn(recipientAddress);
@@ -1272,14 +1164,13 @@ class ERC20PrecompilesTest {
         given(encoder.encodeEcFungibleTransfer(true)).willReturn(successResult);
         when(accessorFactory.uncheckedSpecializedAccessor(any())).thenCallRealMethod();
         when(accessorFactory.constructSpecializedAccessor(any())).thenCallRealMethod();
-        final var log =
-                EncodingFacade.LogBuilder.logBuilder()
-                        .forLogger(tokenAddress)
-                        .forEventSignature(AbiConstants.TRANSFER_EVENT)
-                        .forIndexedArgument(senderAddress)
-                        .forIndexedArgument(recipientAddress)
-                        .forDataItem(AMOUNT)
-                        .build();
+        final var log = EncodingFacade.LogBuilder.logBuilder()
+                .forLogger(tokenAddress)
+                .forEventSignature(AbiConstants.TRANSFER_EVENT)
+                .forIndexedArgument(senderAddress)
+                .forIndexedArgument(recipientAddress)
+                .forDataItem(AMOUNT)
+                .build();
         // when:
         subject.prepareFields(frame);
         subject.prepareComputation(pretendArguments, a -> a);
@@ -1291,8 +1182,7 @@ class ERC20PrecompilesTest {
         // and:
         verify(transferLogic).doZeroSum(tokenTransferChanges);
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
         verify(frame).addLog(log);
     }
 
@@ -1304,9 +1194,7 @@ class ERC20PrecompilesTest {
         givenPricingUtilsContext();
 
         given(frame.getContractAddress()).willReturn(contractAddr);
-        given(
-                        syntheticTxnFactory.createCryptoTransfer(
-                                Collections.singletonList(TOKEN_TRANSFER_FROM_WRAPPER)))
+        given(syntheticTxnFactory.createCryptoTransfer(Collections.singletonList(TOKEN_TRANSFER_FROM_WRAPPER)))
                 .willReturn(mockSynthBodyBuilder);
         given(mockSynthBodyBuilder.getCryptoTransfer()).willReturn(cryptoTransferTransactionBody);
         given(impliedTransfersMarshal.validityWithCurrentProps(cryptoTransferTransactionBody))
@@ -1315,55 +1203,35 @@ class ERC20PrecompilesTest {
         given(sigsVerifier.hasActiveKeyOrNoReceiverSigReq(anyBoolean(), any(), any(), any()))
                 .willReturn(true, true);
 
-        given(infrastructureFactory.newImpliedTransfersMarshal(any()))
-                .willReturn(impliedTransfersMarshal);
+        given(infrastructureFactory.newImpliedTransfersMarshal(any())).willReturn(impliedTransfersMarshal);
         given(infrastructureFactory.newHederaTokenStore(sideEffects, tokens, nfts, tokenRels))
                 .willReturn(hederaTokenStore);
 
-        given(
-                        infrastructureFactory.newTransferLogic(
-                                hederaTokenStore, sideEffects, nfts, accounts, tokenRels))
+        given(infrastructureFactory.newTransferLogic(hederaTokenStore, sideEffects, nfts, accounts, tokenRels))
                 .willReturn(transferLogic);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
         given(mockSynthBodyBuilder.build())
-                .willReturn(
-                        TransactionBody.newBuilder()
-                                .setCryptoTransfer(cryptoTransferTransactionBody)
-                                .build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
+                .willReturn(TransactionBody.newBuilder()
+                        .setCryptoTransfer(cryptoTransferTransactionBody)
+                        .build());
+        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
         given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
-        given(
-                        impliedTransfersMarshal.assessCustomFeesAndValidate(
-                                anyInt(), anyInt(), anyInt(), any(), any(), any()))
+        given(impliedTransfersMarshal.assessCustomFeesAndValidate(anyInt(), anyInt(), anyInt(), any(), any(), any()))
                 .willReturn(impliedTransfers);
         given(impliedTransfers.getAllBalanceChanges()).willReturn(tokenTransferChanges);
         given(impliedTransfers.getMeta()).willReturn(impliedTransfersMeta);
         given(impliedTransfersMeta.code()).willReturn(OK);
 
         ercTransferPrecompile
-                .when(
-                        () ->
-                                ERCTransferPrecompile.decodeERCTransferFrom(
-                                        eq(nestedPretendArguments),
-                                        any(),
-                                        eq(true),
-                                        any(),
-                                        any(),
-                                        any(),
-                                        any()))
+                .when(() -> ERCTransferPrecompile.decodeERCTransferFrom(
+                        eq(nestedPretendArguments), any(), eq(true), any(), any(), any(), any()))
                 .thenReturn(CRYPTO_TRANSFER_TOKEN_FROM_WRAPPER);
 
-        given(aliases.resolveForEvm(any()))
-                .willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+        given(aliases.resolveForEvm(any())).willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
         given(worldUpdater.aliases()).willReturn(aliases);
         given(wrappedLedgers.typeOf(token)).willReturn(TokenType.FUNGIBLE_COMMON);
         given(dynamicProperties.areAllowancesEnabled()).willReturn(true);
@@ -1381,8 +1249,7 @@ class ERC20PrecompilesTest {
         // and:
         verify(transferLogic).doZeroSum(tokenTransferChanges);
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
     }
 
     @Test
@@ -1393,9 +1260,7 @@ class ERC20PrecompilesTest {
         givenPricingUtilsContext();
 
         given(frame.getContractAddress()).willReturn(contractAddr);
-        given(
-                        syntheticTxnFactory.createCryptoTransfer(
-                                Collections.singletonList(TOKEN_TRANSFER_FROM_WRAPPER)))
+        given(syntheticTxnFactory.createCryptoTransfer(Collections.singletonList(TOKEN_TRANSFER_FROM_WRAPPER)))
                 .willReturn(mockSynthBodyBuilder);
         given(mockSynthBodyBuilder.getCryptoTransfer()).willReturn(cryptoTransferTransactionBody);
         given(impliedTransfersMarshal.validityWithCurrentProps(cryptoTransferTransactionBody))
@@ -1403,55 +1268,35 @@ class ERC20PrecompilesTest {
         given(sigsVerifier.hasActiveKey(anyBoolean(), any(), any(), any())).willReturn(true);
         given(sigsVerifier.hasActiveKeyOrNoReceiverSigReq(anyBoolean(), any(), any(), any()))
                 .willReturn(true, true);
-        given(infrastructureFactory.newImpliedTransfersMarshal(any()))
-                .willReturn(impliedTransfersMarshal);
+        given(infrastructureFactory.newImpliedTransfersMarshal(any())).willReturn(impliedTransfersMarshal);
         given(infrastructureFactory.newHederaTokenStore(sideEffects, tokens, nfts, tokenRels))
                 .willReturn(hederaTokenStore);
 
-        given(
-                        infrastructureFactory.newTransferLogic(
-                                hederaTokenStore, sideEffects, nfts, accounts, tokenRels))
+        given(infrastructureFactory.newTransferLogic(hederaTokenStore, sideEffects, nfts, accounts, tokenRels))
                 .willReturn(transferLogic);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
         given(mockSynthBodyBuilder.build())
-                .willReturn(
-                        TransactionBody.newBuilder()
-                                .setCryptoTransfer(cryptoTransferTransactionBody)
-                                .build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
+                .willReturn(TransactionBody.newBuilder()
+                        .setCryptoTransfer(cryptoTransferTransactionBody)
+                        .build());
+        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
         given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
-        given(
-                        impliedTransfersMarshal.assessCustomFeesAndValidate(
-                                anyInt(), anyInt(), anyInt(), any(), any(), any()))
+        given(impliedTransfersMarshal.assessCustomFeesAndValidate(anyInt(), anyInt(), anyInt(), any(), any(), any()))
                 .willReturn(impliedTransfers);
         given(impliedTransfers.getAllBalanceChanges()).willReturn(tokenTransferChanges);
         given(impliedTransfers.getMeta()).willReturn(impliedTransfersMeta);
         given(impliedTransfersMeta.code()).willReturn(OK);
 
         ercTransferPrecompile
-                .when(
-                        () ->
-                                ERCTransferPrecompile.decodeERCTransferFrom(
-                                        eq(pretendArguments),
-                                        eq(null),
-                                        eq(true),
-                                        any(),
-                                        any(),
-                                        any(),
-                                        any()))
+                .when(() -> ERCTransferPrecompile.decodeERCTransferFrom(
+                        eq(pretendArguments), eq(null), eq(true), any(), any(), any(), any()))
                 .thenReturn(CRYPTO_TRANSFER_TOKEN_FROM_WRAPPER);
 
-        given(aliases.resolveForEvm(any()))
-                .willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+        given(aliases.resolveForEvm(any())).willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
         given(worldUpdater.aliases()).willReturn(aliases);
         given(dynamicProperties.areAllowancesEnabled()).willReturn(true);
         when(accessorFactory.uncheckedSpecializedAccessor(any())).thenCallRealMethod();
@@ -1467,17 +1312,15 @@ class ERC20PrecompilesTest {
         // and:
         verify(transferLogic).doZeroSum(tokenTransferChanges);
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
         verify(frame)
-                .addLog(
-                        EncodingFacade.LogBuilder.logBuilder()
-                                .forLogger(EntityIdUtils.asTypedEvmAddress(token))
-                                .forEventSignature(AbiConstants.TRANSFER_EVENT)
-                                .forIndexedArgument(sender)
-                                .forIndexedArgument(receiver)
-                                .forDataItem(AMOUNT)
-                                .build());
+                .addLog(EncodingFacade.LogBuilder.logBuilder()
+                        .forLogger(EntityIdUtils.asTypedEvmAddress(token))
+                        .forEventSignature(AbiConstants.TRANSFER_EVENT)
+                        .forIndexedArgument(sender)
+                        .forIndexedArgument(receiver)
+                        .forDataItem(AMOUNT)
+                        .build());
     }
 
     @Test
@@ -1488,9 +1331,7 @@ class ERC20PrecompilesTest {
         givenPricingUtilsContext();
 
         given(frame.getContractAddress()).willReturn(contractAddr);
-        given(
-                        syntheticTxnFactory.createCryptoTransfer(
-                                Collections.singletonList(TOKEN_TRANSFER_FROM_NFT_WRAPPER)))
+        given(syntheticTxnFactory.createCryptoTransfer(Collections.singletonList(TOKEN_TRANSFER_FROM_NFT_WRAPPER)))
                 .willReturn(mockSynthBodyBuilder);
         given(mockSynthBodyBuilder.getCryptoTransfer()).willReturn(cryptoTransferTransactionBody);
         given(impliedTransfersMarshal.validityWithCurrentProps(cryptoTransferTransactionBody))
@@ -1498,35 +1339,24 @@ class ERC20PrecompilesTest {
         given(sigsVerifier.hasActiveKey(anyBoolean(), any(), any(), any())).willReturn(true);
         given(sigsVerifier.hasActiveKeyOrNoReceiverSigReq(anyBoolean(), any(), any(), any()))
                 .willReturn(true);
-        given(infrastructureFactory.newImpliedTransfersMarshal(any()))
-                .willReturn(impliedTransfersMarshal);
+        given(infrastructureFactory.newImpliedTransfersMarshal(any())).willReturn(impliedTransfersMarshal);
         given(infrastructureFactory.newHederaTokenStore(sideEffects, tokens, nfts, tokenRels))
                 .willReturn(hederaTokenStore);
 
-        given(
-                        infrastructureFactory.newTransferLogic(
-                                hederaTokenStore, sideEffects, nfts, accounts, tokenRels))
+        given(infrastructureFactory.newTransferLogic(hederaTokenStore, sideEffects, nfts, accounts, tokenRels))
                 .willReturn(transferLogic);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
         given(mockSynthBodyBuilder.build())
-                .willReturn(
-                        TransactionBody.newBuilder()
-                                .setCryptoTransfer(cryptoTransferTransactionBody)
-                                .build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
+                .willReturn(TransactionBody.newBuilder()
+                        .setCryptoTransfer(cryptoTransferTransactionBody)
+                        .build());
+        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
         given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(
-                        creator.createSuccessfulSyntheticRecord(
-                                Collections.emptyList(), sideEffects, EMPTY_MEMO))
+        given(creator.createSuccessfulSyntheticRecord(Collections.emptyList(), sideEffects, EMPTY_MEMO))
                 .willReturn(mockRecordBuilder);
-        given(
-                        impliedTransfersMarshal.assessCustomFeesAndValidate(
-                                anyInt(), anyInt(), anyInt(), any(), any(), any()))
+        given(impliedTransfersMarshal.assessCustomFeesAndValidate(anyInt(), anyInt(), anyInt(), any(), any(), any()))
                 .willReturn(impliedTransfers);
         given(impliedTransfers.getAllBalanceChanges()).willReturn(tokenTransferChanges);
         given(impliedTransfers.getMeta()).willReturn(impliedTransfersMeta);
@@ -1535,20 +1365,11 @@ class ERC20PrecompilesTest {
         given(nfts.contains(NftId.fromGrpc(token, serialNumber))).willReturn(true);
 
         ercTransferPrecompile
-                .when(
-                        () ->
-                                ERCTransferPrecompile.decodeERCTransferFrom(
-                                        eq(pretendArguments),
-                                        eq(null),
-                                        eq(false),
-                                        any(),
-                                        any(),
-                                        any(),
-                                        any()))
+                .when(() -> ERCTransferPrecompile.decodeERCTransferFrom(
+                        eq(pretendArguments), eq(null), eq(false), any(), any(), any(), any()))
                 .thenReturn(CRYPTO_TRANSFER_TOKEN_FROM_NFT_WRAPPER);
 
-        given(aliases.resolveForEvm(any()))
-                .willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+        given(aliases.resolveForEvm(any())).willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
         given(worldUpdater.aliases()).willReturn(aliases);
         given(dynamicProperties.areAllowancesEnabled()).willReturn(true);
         when(accessorFactory.uncheckedSpecializedAccessor(any())).thenCallRealMethod();
@@ -1564,17 +1385,15 @@ class ERC20PrecompilesTest {
         // and:
         verify(transferLogic).doZeroSum(tokenTransferChanges);
         verify(wrappedLedgers).commit();
-        verify(worldUpdater)
-                .manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
+        verify(worldUpdater).manageInProgressRecord(recordsHistorian, mockRecordBuilder, mockSynthBodyBuilder);
         verify(frame)
-                .addLog(
-                        EncodingFacade.LogBuilder.logBuilder()
-                                .forLogger(EntityIdUtils.asTypedEvmAddress(token))
-                                .forEventSignature(AbiConstants.TRANSFER_EVENT)
-                                .forIndexedArgument(sender)
-                                .forIndexedArgument(receiver)
-                                .forIndexedArgument(serialNumber)
-                                .build());
+                .addLog(EncodingFacade.LogBuilder.logBuilder()
+                        .forLogger(EntityIdUtils.asTypedEvmAddress(token))
+                        .forEventSignature(AbiConstants.TRANSFER_EVENT)
+                        .forIndexedArgument(sender)
+                        .forIndexedArgument(receiver)
+                        .forIndexedArgument(serialNumber)
+                        .build());
     }
 
     @Test
@@ -1585,52 +1404,38 @@ class ERC20PrecompilesTest {
         givenPricingUtilsContext();
 
         given(frame.getContractAddress()).willReturn(contractAddr);
-        given(
-                        syntheticTxnFactory.createCryptoTransfer(
-                                Collections.singletonList(tokensTransferList)))
+        given(syntheticTxnFactory.createCryptoTransfer(Collections.singletonList(tokensTransferList)))
                 .willReturn(mockSynthBodyBuilder);
         given(mockSynthBodyBuilder.getCryptoTransfer()).willReturn(cryptoTransferTransactionBody);
         given(impliedTransfersMarshal.validityWithCurrentProps(cryptoTransferTransactionBody))
                 .willReturn(OK);
         given(sigsVerifier.hasActiveKey(anyBoolean(), any(), any(), any())).willReturn(false);
-        given(infrastructureFactory.newImpliedTransfersMarshal(any()))
-                .willReturn(impliedTransfersMarshal);
+        given(infrastructureFactory.newImpliedTransfersMarshal(any())).willReturn(impliedTransfersMarshal);
         given(infrastructureFactory.newHederaTokenStore(sideEffects, tokens, nfts, tokenRels))
                 .willReturn(hederaTokenStore);
 
-        given(
-                        creator.createUnsuccessfulSyntheticRecord(
-                                INVALID_FULL_PREFIX_SIGNATURE_FOR_PRECOMPILE))
+        given(creator.createUnsuccessfulSyntheticRecord(INVALID_FULL_PREFIX_SIGNATURE_FOR_PRECOMPILE))
                 .willReturn(mockRecordBuilder);
-        given(
-                        feeCalculator.estimatedGasPriceInTinybars(
-                                HederaFunctionality.ContractCall, timestamp))
+        given(feeCalculator.estimatedGasPriceInTinybars(HederaFunctionality.ContractCall, timestamp))
                 .willReturn(1L);
         given(mockSynthBodyBuilder.build())
-                .willReturn(
-                        TransactionBody.newBuilder()
-                                .setCryptoTransfer(cryptoTransferTransactionBody)
-                                .build());
-        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class)))
-                .willReturn(mockSynthBodyBuilder);
+                .willReturn(TransactionBody.newBuilder()
+                        .setCryptoTransfer(cryptoTransferTransactionBody)
+                        .build());
+        given(mockSynthBodyBuilder.setTransactionID(any(TransactionID.class))).willReturn(mockSynthBodyBuilder);
         given(feeCalculator.computeFee(any(), any(), any(), any())).willReturn(mockFeeObject);
         given(mockFeeObject.getServiceFee()).willReturn(1L);
-        given(
-                        impliedTransfersMarshal.assessCustomFeesAndValidate(
-                                anyInt(), anyInt(), anyInt(), any(), any(), any()))
+        given(impliedTransfersMarshal.assessCustomFeesAndValidate(anyInt(), anyInt(), anyInt(), any(), any(), any()))
                 .willReturn(impliedTransfers);
         given(impliedTransfers.getAllBalanceChanges()).willReturn(tokenTransferChanges);
         given(impliedTransfers.getMeta()).willReturn(impliedTransfersMeta);
         given(impliedTransfersMeta.code()).willReturn(OK);
         ercTransferPrecompile
-                .when(
-                        () ->
-                                ERCTransferPrecompile.decodeERCTransfer(
-                                        eq(nestedPretendArguments), any(), any(), any(), any()))
+                .when(() ->
+                        ERCTransferPrecompile.decodeERCTransfer(eq(nestedPretendArguments), any(), any(), any(), any()))
                 .thenReturn(CRYPTO_TRANSFER_FUNGIBLE_WRAPPER);
 
-        given(aliases.resolveForEvm(any()))
-                .willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
+        given(aliases.resolveForEvm(any())).willAnswer(invocationOnMock -> invocationOnMock.getArgument(0));
         given(worldUpdater.aliases()).willReturn(aliases);
         given(wrappedLedgers.typeOf(token)).willReturn(TokenType.FUNGIBLE_COMMON);
         when(accessorFactory.uncheckedSpecializedAccessor(any())).thenCallRealMethod();
@@ -1648,32 +1453,26 @@ class ERC20PrecompilesTest {
     @Test
     void ownerOfNotSupported() {
         final Bytes nestedPretendArguments = Bytes.of(Integers.toBytes(ABI_ID_ERC_OWNER_OF_NFT));
-        final Bytes pretendArguments =
-                givenMinimalFrameContextWithoutParentUpdater(nestedPretendArguments);
+        final Bytes pretendArguments = givenMinimalFrameContextWithoutParentUpdater(nestedPretendArguments);
 
         given(wrappedLedgers.typeOf(token)).willReturn(TokenType.FUNGIBLE_COMMON);
         subject.prepareFields(frame);
 
-        final var exception =
-                assertThrows(
-                        InvalidTransactionException.class,
-                        () -> subject.prepareComputation(pretendArguments, a -> a));
+        final var exception = assertThrows(
+                InvalidTransactionException.class, () -> subject.prepareComputation(pretendArguments, a -> a));
         assertEquals(NOT_SUPPORTED_FUNGIBLE_OPERATION_REASON, exception.getMessage());
     }
 
     @Test
     void tokenURINotSupported() {
         final Bytes nestedPretendArguments = Bytes.of(Integers.toBytes(ABI_ID_ERC_TOKEN_URI_NFT));
-        final Bytes pretendArguments =
-                givenMinimalFrameContextWithoutParentUpdater(nestedPretendArguments);
+        final Bytes pretendArguments = givenMinimalFrameContextWithoutParentUpdater(nestedPretendArguments);
 
         given(wrappedLedgers.typeOf(token)).willReturn(TokenType.FUNGIBLE_COMMON);
         subject.prepareFields(frame);
 
-        final var exception =
-                assertThrows(
-                        InvalidTransactionException.class,
-                        () -> subject.prepareComputation(pretendArguments, a -> a));
+        final var exception = assertThrows(
+                InvalidTransactionException.class, () -> subject.prepareComputation(pretendArguments, a -> a));
         assertEquals(NOT_SUPPORTED_FUNGIBLE_OPERATION_REASON, exception.getMessage());
     }
 
@@ -1685,20 +1484,14 @@ class ERC20PrecompilesTest {
         final Optional<WorldUpdater> parent = Optional.of(worldUpdater);
         given(worldUpdater.parentUpdater()).willReturn(parent);
         given(worldUpdater.wrappedTrackingLedgers(any())).willReturn(wrappedLedgers);
-        return Bytes.concatenate(
-                Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
-                fungibleTokenAddr,
-                nestedArg);
+        return Bytes.concatenate(Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)), fungibleTokenAddr, nestedArg);
     }
 
     private Bytes givenMinimalFrameContextWithoutParentUpdater(final Bytes nestedArg) {
         given(frame.getSenderAddress()).willReturn(contractAddress);
         given(frame.getWorldUpdater()).willReturn(worldUpdater);
         given(worldUpdater.wrappedTrackingLedgers(any())).willReturn(wrappedLedgers);
-        return Bytes.concatenate(
-                Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)),
-                fungibleTokenAddr,
-                nestedArg);
+        return Bytes.concatenate(Bytes.of(Integers.toBytes(ABI_ID_REDIRECT_FOR_TOKEN)), fungibleTokenAddr, nestedArg);
     }
 
     private void givenLedgers() {
@@ -1714,35 +1507,24 @@ class ERC20PrecompilesTest {
         given(exchangeRate.getHbarEquiv()).willReturn(HBAR_RATE);
     }
 
-    public static final BalanceOfWrapper<AccountID> BALANCE_OF_WRAPPER =
-            new BalanceOfWrapper<>(sender);
+    public static final BalanceOfWrapper<AccountID> BALANCE_OF_WRAPPER = new BalanceOfWrapper<>(sender);
 
     public static final TokenAllowanceWrapper<TokenID, AccountID, AccountID> ALLOWANCE_WRAPPER =
             new TokenAllowanceWrapper<>(token, sender, receiver);
 
-    public static final TokenTransferWrapper TOKEN_TRANSFER_FROM_WRAPPER =
-            new TokenTransferWrapper(
-                    new ArrayList<>() {},
-                    List.of(
-                            new SyntheticTxnFactory.FungibleTokenTransfer(
-                                    AMOUNT, true, token, null, receiver),
-                            new SyntheticTxnFactory.FungibleTokenTransfer(
-                                    -AMOUNT, true, token, sender, null)));
+    public static final TokenTransferWrapper TOKEN_TRANSFER_FROM_WRAPPER = new TokenTransferWrapper(
+            new ArrayList<>() {},
+            List.of(
+                    new SyntheticTxnFactory.FungibleTokenTransfer(AMOUNT, true, token, null, receiver),
+                    new SyntheticTxnFactory.FungibleTokenTransfer(-AMOUNT, true, token, sender, null)));
 
-    public static final CryptoTransferWrapper CRYPTO_TRANSFER_TOKEN_FROM_WRAPPER =
-            new CryptoTransferWrapper(
-                    new TransferWrapper(Collections.emptyList()),
-                    Collections.singletonList(TOKEN_TRANSFER_FROM_WRAPPER));
-    public static final TokenTransferWrapper TOKEN_TRANSFER_FROM_NFT_WRAPPER =
-            new TokenTransferWrapper(
-                    List.of(
-                            SyntheticTxnFactory.NftExchange.fromApproval(
-                                    serialNumber, token, sender, receiver)),
-                    new ArrayList<>() {});
-    public static final CryptoTransferWrapper CRYPTO_TRANSFER_TOKEN_FROM_NFT_WRAPPER =
-            new CryptoTransferWrapper(
-                    new TransferWrapper(Collections.emptyList()),
-                    Collections.singletonList(TOKEN_TRANSFER_FROM_NFT_WRAPPER));
+    public static final CryptoTransferWrapper CRYPTO_TRANSFER_TOKEN_FROM_WRAPPER = new CryptoTransferWrapper(
+            new TransferWrapper(Collections.emptyList()), Collections.singletonList(TOKEN_TRANSFER_FROM_WRAPPER));
+    public static final TokenTransferWrapper TOKEN_TRANSFER_FROM_NFT_WRAPPER = new TokenTransferWrapper(
+            List.of(SyntheticTxnFactory.NftExchange.fromApproval(serialNumber, token, sender, receiver)),
+            new ArrayList<>() {});
+    public static final CryptoTransferWrapper CRYPTO_TRANSFER_TOKEN_FROM_NFT_WRAPPER = new CryptoTransferWrapper(
+            new TransferWrapper(Collections.emptyList()), Collections.singletonList(TOKEN_TRANSFER_FROM_NFT_WRAPPER));
 
     public static final ApproveWrapper APPROVE_WRAPPER =
             new ApproveWrapper(token, receiver, BigInteger.ONE, BigInteger.ZERO, true);
